@@ -18,17 +18,18 @@ define polkit::authorization::rule (
   Integer[0,99]            $priority = 10,
   Stdlib::AbsolutePath     $rulesd   = '/etc/polkit-1/rules.d'
 ) {
-  simplib::assert_metadata($module_name)
+  # For backwards compatibility purposes, this defined type is inert if called from an unsupported OS
+  if simplib::module_metadata::os_supported( load_module_metadata($module_name), { 'release_match' => 'major' }) {
+    include polkit
 
-  include polkit
+    $_name = regsubst($name.downcase, '( |/|!|@|#|\$|%|\^|&|\*|[|])', '_', 'G')
 
-  $_name = regsubst($name.downcase, '( |/|!|@|#|\$|%|\^|&|\*|[|])', '_', 'G')
-
-  file { "${rulesd}/${priority}-${_name}.rules":
-    ensure  => $ensure,
-    content => $content,
-    owner   => 'root',
-    group   => 'root',
-    mode    => '0644',
+    file { "${rulesd}/${priority}-${_name}.rules":
+      ensure  => $ensure,
+      content => $content,
+      owner   => 'root',
+      group   => 'root',
+      mode    => '0644',
+    }
   }
 }
